--- a/store/templates/store/booking.html
+++ b/store/templates/store/booking.html
@@ -10,16 +10,14 @@
             <input class="btn" type="submit" value="Filtrer" />
         </form>
     </div>
-    <div>
-        <form class="d-flex" action="{% url 'store:booking' %}" method="GET">
-            <input class="btn" type="submit" value="Clear" />
-        </form>
-    </div>
     <table class="table"><tbody>
             <th>Date</th>
             <th>Contact</th>
             <th>Ouvrage</th>
             <th>Quantité</th>
+            <th>Prix</th>
+            <th>Nb Ouvrages</th>
+            <th>Total</th>
             <th>Contacté</th>
         {% for booking in bookings_list_sel %}
         <tr>
@@ -28,7 +26,12 @@
             <td>
                 {% for booking_detail in booking_detail_list %}
                     {% if booking_detail.booking.id == booking.id %}
-                        <a  href="{% url 'store:detail' ouvrage_id=booking_detail.ouvrage.id %}">{{ booking_detail.ouvrage.title }}</a><br />
+                        <form action="{% url 'store:booking' %}" method="post">
+                            {% csrf_token %}
+                            <input type="hidden" name="booking_detail_id" value="{{ booking_detail.id }}" >
+                            <a href="{% url 'store:detail' ouvrage_id=booking_detail.ouvrage.id %}">{{ booking_detail.ouvrage.title }}</a>
+                            <button type="submit" name="action" value="X" class="bi bi-x-square" onclick="return confirm('Etes-vous sûr ?');"></button><br />
+                        </form>
                     {% endif %}
                 {% endfor %}
             </td>
@@ -38,6 +41,19 @@
                         {{ booking_detail.qty }}<br />
                     {% endif %}
                 {% endfor %}
+            </td>
+            <td>
+                {% for booking_detail in booking_detail_list %}
+                    {% if booking_detail.booking.id == booking.id %}
+                        {{ booking_detail.ouvrage.price }} €<br />
+                    {% endif %}
+                {% endfor %}
+            </td>
+            <td>
+                {{ booking.ouvrages_qty }}
+            </td>
+            <td>
+                {{ booking.total }} €
             </td>
             <td>
                 <form class="navbar navbar-expand-lg" action="{% url 'store:booking' %}" method="post">
